--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body onload="init()">
-    <div class="menu">
+    <div class="menu draggable" id="menu">
         <div class="cursor-size menu-item">
             <input class="cursor-btn" type="button" value="-">
             <input class="cursor" type="number" name="" id="" value="1">
             <input class="cursor-btn" type="button" value="+">
         </div>
         <div class="menu-item">
-            <input type="color" name="" id="">
+            <input type="color" name="" id="color-picker" onchange="setDrawColor(event)">
         </div>
     </div>
     <div class="container">
@@ -28,6 +28,7 @@
     </div>
 
     <script src="js/scripts.js "></script>
+    <script src="js/drag.js"></script>
 </body>
 
 </html>
